<resources>
    <string name="app_name">Blitter</string>

    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_search">Search for hashtag…</string>
    <string name="hint_whats_bleetin">Whats Bleetin\'?</string>

    <string name="button_login">Login</string>
    <string name="button_sign_up_link_text">No account? Go to Sign up</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_login_link_text">Already have an account? Go to Login</string>
    <string name="button_apply">Apply</string>
    <string name="button_sign_out">Sign Out</string>


    <string name="home_screen_title_text">Home</string>
    <string name="content_description_write_blit">Write Blit</string>
    <string name="fragment_title_label_home">Home</string>
    <string name="fragment_title_label_my_activity">My Activity</string>


</resources>